Server URLS prod

--- a/src/index.html
+++ b/src/index.html
@@ -143,12 +143,11 @@
         <table id="data-table" class="table">
             <thead>
                 <tr>
-                    <!-- Column 1: Solution Area -->
-                   
+                    <!-- Headers will be dynamically populated -->
                 </tr>
             </thead>
             <tbody>
-                <!-- Data will be dynamically populated here by app.js -->
+                <!-- Rows will be dynamically populated -->
             </tbody>
         </table>
     </div>
