Fixing CORS URL and added image in the source

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
     <!-- Header Section -->
     <div class="header">
         <!-- Logo -->
-        <img src="https://partnertechwinroom.github.io/PTWRFAQs/assets/image1.png" alt="Logo">
+        <img src="./assets/image.png" alt="Logo">
         <!-- Page Title -->
         <h1>Partner Tech Win Room FAQs</h1>
     </div>
