updated table name and index

--- a/src/index.html
+++ b/src/index.html
@@ -135,9 +135,8 @@
     <!-- Main Content Section -->
     <div class="container">
         <!-- Introduction Text -->
-        <p>Welcome to the Partner Tech Win Room FAQs page. Here you can find answers to the most common questions.</p>
+        <p>Welcome to the Partner Tech Win Room FAQs page. Dear expert, please answer the questions as assigned.</p>
         <p>Use the filters below to narrow down your search.</p>
-        <p>For any further questions, please reach out to your Partner Tech Win Room representative.</p>
 
         <!-- Data Table -->
         <table id="data-table" class="table">
