--- a/src/index.html
+++ b/src/index.html
@@ -1,83 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Partner Tech Win Room Ans Portal</title>
+    <meta charset="UTF-8"> <!-- Set the character encoding for the document -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensure proper scaling on mobile devices -->
+    <title>Partner Tech Win Room Ans Portal</title> <!-- Page title displayed in the browser tab -->
+
     <!-- Link to Google Fonts for a clean and professional font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
     <style>
         /* Corporate Styling */
         body {
-            font-family: 'Roboto', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
+            font-family: 'Roboto', Arial, sans-serif; /* Use Roboto font with fallback to Arial */
+            margin: 0; /* Remove default margin */
+            padding: 0; /* Remove default padding */
+            background-color: #f9f9f9; /* Light gray background color */
+            color: #333; /* Dark gray text color */
         }
 
         /* Header styling */
         .header {
-            background-color: #004080;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
+            background-color: #004080; /* Dark blue background */
+            color: white; /* White text color */
+            padding: 20px 0; /* Vertical padding */
+            text-align: center; /* Center-align the content */
         }
 
         .header img {
-            max-width: 150px;
-            margin-bottom: 10px;
+            max-width: 150px; /* Limit the logo width */
+            margin-bottom: 10px; /* Add spacing below the logo */
         }
 
         .header h1 {
-            margin: 0;
-            font-size: 24px;
+            margin: 0; /* Remove default margin */
+            font-size: 24px; /* Set font size for the header title */
         }
 
         /* Main content container styling */
         .container {
             width: 90%; /* Use a percentage for flexible width */
             max-width: 1200px; /* Limit the maximum width */
-            margin: 20px auto;
-            background: white;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            margin: 20px auto; /* Center the container with vertical spacing */
+            background: white; /* White background for the container */
+            padding: 20px; /* Add padding inside the container */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
+            border-radius: 8px; /* Round the corners */
         }
 
         /* Table styling */
         .table {
             width: 100%; /* Full width table */
-            border-collapse: collapse;
-            margin: 20px 0;
+            border-collapse: collapse; /* Remove gaps between table cells */
+            margin: 20px 0; /* Add vertical spacing */
         }
 
         .table th, .table td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: left;
+            border: 1px solid #ddd; /* Light gray border for cells */
+            padding: 10px; /* Add padding inside cells */
+            text-align: left; /* Align text to the left */
         }
 
         .table th {
-            background-color: #004080;
-            color: white;
+            background-color: #004080; /* Dark blue background for headers */
+            color: white; /* White text color for headers */
         }
 
         .table tr:nth-child(even) {
-            background-color: #f2f2f2;
+            background-color: #f2f2f2; /* Light gray background for even rows */
         }
 
         .table tr:hover {
-            background-color: #e6f7ff;
+            background-color: #e6f7ff; /* Light blue background on hover */
         }
 
         /* Footer styling */
         .footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #004080;
-            color: white;
-            margin-top: 20px;
+            text-align: center; /* Center-align the footer content */
+            padding: 10px; /* Add padding inside the footer */
+            background-color: #004080; /* Dark blue background */
+            color: white; /* White text color */
+            margin-top: 20px; /* Add spacing above the footer */
         }
 
         /* Responsive Design: Adjust for smaller screens */
@@ -127,9 +129,9 @@
     <!-- Header Section -->
     <div class="header">
         <!-- Logo -->
-        <img src="https://partnertechwinroom.github.io/PTWRFAQs/assets/image1.png" alt="Logo">
+        <img src="https://partnertechwinroom.github.io/PTWRFAQs/assets/image1.png" alt="Logo"> <!-- Display the logo -->
         <!-- Page Title -->
-        <h1>Partner Tech Win Room FAQs</h1>
+        <h1>Partner Tech Win Room FAQs</h1> <!-- Main title of the page -->
     </div>
 
     <!-- Main Content Section -->
@@ -153,12 +155,12 @@
 
     <!-- Footer Section -->
     <div class="footer">
-        &copy; 2023 Partner Tech Win Room. All rights reserved.
+        &copy; 2023 Partner Tech Win Room. All rights reserved. <!-- Copyright notice -->
         <br>
-        <span id="row-count">Total Rows: 0</span>
+        <span id="row-count">Total Rows: 0</span> <!-- Placeholder for the total row count -->
     </div>
 
     <!-- JavaScript File -->
-    <script src="app.js"></script>
+    <script src="app.js"></script> <!-- Link to the main JavaScript file -->
 </body>
 </html>
