--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,8 @@
     <!-- Main Content Section -->
     <div class="container">
         <!-- Introduction Text -->
-        <p>Welcome to the Partner Tech Win Room FAQs page. Dear expert, please answer the questions as assigned.</p>
+        <p>Welcome to the Partner Tech Win Room FAQs page. </p>
+        <p> Dear expert, please answer the questions as assigned.</p>
         <p>Use the filters below to narrow down your search.</p>
 
         <!-- Data Table -->
