--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
 
     <!-- Footer Section -->
     <div class="footer">
-        &copy; 2023 Partner Tech Win Room. All rights reserved. <!-- Copyright notice -->
+        &copy; 2023 Partner Tech Win Room. All rights reserved GPS Tech Team. <!-- Copyright notice -->
         <br>
         <span id="row-count">Total Rows: 0</span> <!-- Placeholder for the total row count -->
     </div>
